# setlist-requests

./: .gitignore  Cargo.toml  Containerfile  package-lock.json  start-postgres  tailwind.config.js
.github/workflows/: deploy.yml
.helix/: languages.toml
.sqlx/: query-2bbd0e2669cf18293e55ab6e8f67aca22584fa2619701449a33a9296cafce3ca.json  query-2db3b322a70f3c6f7d0182397f81914d76afd36cb3f1c46fd01bccb6a91b4429.json  query-38feee5161f3473ae6561724a9bce23754998e98af25bae60efd051a733035e5.json  query-45ac96ec696c1151480219d3fa95c3ba0b012d667ddb0f95c55c23674b494ca1.json  query-4d7ebcd3124c492a2466cff19e54de2ea7874e48fa0e73d4c308236485c3aaf5.json  query-5883141bb6f0844553414c8d6d7ac58e1ec8ee45b859888d8922556b0f6c2ac4.json  query-5cf1e80d41078e0eab355d7371b8c46c4b61cc84aed437bdfed5dbc6f7ffdeec.json  query-5febb6d036aeebecacbc3474e64c42296184b7bd7cd39e77f67d599a3ba48e5e.json  query-8ad636f7cf2d75b4d9f2a4273eb20ee2d1da07141c48d8866537f45fef205012.json  query-9adde896a3336a5f32d4c20b87790fca74e043bcdb4795d2483314de4dccb52f.json  query-9e1de8d650749652611552f18af48daee72f7be853b588ab3a64fc4bf8c89ed1.json  query-9f5b3138e6dfb2be175ab6949b5e98dd1010d13356bb87b9a1e010e0d267df80.json  query-dcc70f63ec23b6490523053848cc5a50d725e06f251234ff8dfef86d73f8d751.json
assets/: tailwind.css
assets/scripts/: develop-updates.js  htmx-config.js  vote-updates.js
migrations/: 20240922143745_create_tables.sql  20241010114351_hidden_songs.sql
src/: app.rs  database.rs  develop.rs  errors.rs  icons.rs  lib.rs  main.rs  page.rs  setlist.rs  view.rs  vote.rs  vote_results.rs
