[package]
name = "setlist-requests"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
futures = "0.3"
mime = "0.3"
rstml-to-string-macro = "0.1.0"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
