[package]
name = "setlist-requests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.5", features = ["ws"] }
dotenv = "0.15.0"
futures = "0.3"
mime = "0.3"
random-string = "1.1"
rstml-to-string-macro = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
